--- a/TSDW/PHP/src/MyCloud/style.css
+++ b/TSDW/PHP/src/MyCloud/style.css
@@ -38,6 +38,11 @@ input {
 .gallery-ul {
   list-style-type: none;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 48% 48%;
   gap: 5%;
+  padding: 0px;
+}
+
+.image {
+  width: 100%;
 }
